--- a/Running Code.ipynb
+++ b/Running Code.ipynb
@@ -124,7 +124,6 @@
    "outputs": [],
    "source": [
     "import sys\n",
-    "from ctypes import CDLL\n",
     "\n",
     "# This will crash a Linux or Mac system\n",
     "# equivalent calls can be made on Windows\n",
@@ -225,9 +224,7 @@
     }
    ],
    "source": [
-    "from __future__ import print_function\n",
-    "\n",
-    "print('hi, stderr', file=sys.stderr)"
+    "print(\"hi, stderr\", file=sys.stderr)"
    ]
   },
   {
@@ -270,7 +267,8 @@
     }
    ],
    "source": [
-    "import time, sys\n",
+    "import sys\n",
+    "import time\n",
     "\n",
     "for i in range(8):\n",
     "    print(i)\n",
