Add nbviewer.jupyter.org to the ignore list (#7197)
* Add nbviewer.jupyter.org to the ignore list

* Fix https link

--- a/Notebook Basics.ipynb
+++ b/Notebook Basics.ipynb
@@ -185,7 +185,7 @@
    "source": [
     "The first idea of mouse based navigation is that **cells can be selected by clicking on them.** The currently selected cell gets a grey or green border depending on whether the notebook is in edit or command mode. If you click inside a cell's editor area, you will enter edit mode. If you click on the prompt or output area of a cell you will enter command mode.\n",
     "\n",
-    "If you are running this notebook in a live session (not on http://nbviewer.jupyter.org) try selecting different cells and going between edit and command mode. Try typing into a cell."
+    "If you are running this notebook in a live session (not on https://nbviewer.jupyter.org) try selecting different cells and going between edit and command mode. Try typing into a cell."
    ]
   },
   {
